--- a/analysis/paper/Ozarks_FA_Analysis.Rmd
+++ b/analysis/paper/Ozarks_FA_Analysis.Rmd
@@ -207,10 +207,11 @@ peri_areal_lms <- FA_groups_areal|>
   filter(Type == "Periphyton")|>
   pivot_longer(c(LSAFA,ARA, Tot_FA, EPA, DHA, sum_PUFA),values_to = "FA_per", names_to = "FA")|>mutate(FA = as_factor(FA))|>
   nest_by(FA)|>
-  mutate(model = list(lm(FA_per ~ EcoRegion+Canopy_Cover_per+NO3_ug.L, data = data)),
+  mutate(model = list(lm(FA_per ~ EcoRegion+NO3_ug.L+Canopy_Cover_per, data = data)),
          model_reduced =  list(lm(FA_per ~ EcoRegion, data = data)))|>
   summarize(glance(model), 
-            partr2_summary = list(tidy(getDeltaRsquare(model))),
+            deltar2_summary = list(tidy(rockchalk::getDeltaRsquare(model))),
+            #partr2_summary = list(tidy(partR2::partR2(model))),
             coefs = list(tidy(model)|>filter(term != "(Intercept)")), 
             vif = list(tibble(vif(model))),
             p.val_lnh= anova(model,model_reduced)[[6]][[2]],
@@ -294,6 +295,7 @@ peri_per_lms <- FA_groups_per|>
   mutate(model = list(lm(FA_per ~ EcoRegion+Canopy_Cover_per+NO3_ug.L, data = data)),
          model_reduced = list(lm(FA_per ~ EcoRegion, data = data)))|>
   summarize(glance(model), 
+            deltar2_summary = list(tidy(rockchalk::getDeltaRsquare(model))),
             coefs = list(tidy(model)|>filter(term != "(Intercept)")), 
             vif = list(tibble(vif(model))),
             p.val_lnh= anova(model,model_reduced)[[6]][[2]],
@@ -336,7 +338,6 @@ areal_lm_table
 
 # Ordinate the periphyton FA profiles
 Groups = 18 MUFA, 16_MUFA, DHA, EPA, ARA, ALA, EPA, SDA, LIN, brFA,LSAFA
-
 
 
 RDA needs an env matrix and a response matrix
@@ -397,6 +398,7 @@ FA_per_ratios<-FA_groups_per|>
     group_by(Site)|>
     mutate(across(c(LSAFA,ARA,w3_w6,EPA, DHA, per_PUFA), ~./.[Type == "Periphyton"]), .keep = "used")|>
   ungroup()
+
 
 peri_FA_per <- FA_groups_per|>
   filter(Type == "Periphyton")|>
@@ -792,28 +794,35 @@ invert_shred_chllms <- invert_per_shred|>
 lmm1 <- ffg_inverts|>
   pivot_longer(c(LSAFA,ARA,w3_w6,EPA, DHA, per_PUFA),values_to = "FA_per", names_to = "FA")|>mutate(FA = as_factor(FA))|>
   nest_by(FA)|>
-  mutate(model = list(lmer(FA_per ~ Canopy_Cover_per*FFG+NO3_ug.L*FFG+(1|Taxon), data = data)),
-         model_lm = list(lm(FA_per ~ Canopy_Cover_per*FFG+NO3_ug.L*FFG, data = data)),
-         model_reduced = list(lmer(FA_per ~ 1 + FFG + (1|Taxon), data = data)))|>
-  summarize(glance(model), 
+  mutate(#model = list(lmer(FA_per ~ Canopy_Cover_per*FFG+NO3_ug.L*FFG+(1|Taxon), data = data)),
+         model = list(lm(FA_per ~ Canopy_Cover_per*NO3_ug.L+Taxon, data = data)),
+         model_reduced = list(lm(FA_per ~ Canopy_Cover_per*NO3_ug.L, data = data)),
+         model_taxon = list(lm(FA_per ~ Taxon, data = data)))|>
+  summarize(glance(model),
+            partr2 = list(tidy(rockchalk::getDeltaRsquare(model))),
+            R2_model = rsq::rsq(model), 
+            R2_reduced = rsq::rsq(model_reduced),
+            R2_taxon = rsq::rsq(model_taxon),
+            #partr2_full = list(partR2::partR2(model, data = data,partvars = c("Canopy_Cover_per","FFG", "NO3_ug.L"))),
+            #partr2_merge = list(mergeR2(partR2::partR2(model, data = data, partvars = c("Canopy_Cover_per:FFG", "NO3_ug.L:FFG")),partR2::partR2(model_noint, data = data))),
             coefs_lmm = list(tidy(model)|>filter(term != "(Intercept)")), 
-            coefs_lm = list(tidy(model_lm)|>filter(term != "(Intercept)")),
+            #coefs_lm = list(tidy(model_lm)|>filter(term != "(Intercept)")),
             #vif = list(tibble(vif(model))),
-           comparison = list(anova(model,model_reduced)),
+           #comparison = list(anova(model,model_reduced)),
             anova(model)|>as_tibble(rownames = "term")|>rename(ss= `Sum Sq`)|>mutate(sum_ss = sum(ss), pss = ss/sum_ss)|>filter(term %in% c("Canopy_Cover_per","NO3_ug.L"))|>summarize(pR2_lnh = sum(pss)),
             resids = list(bind_cols(data, 
                                     resids = resid(model),
                                     fitted = fitted(model), name = FA, 
                                     )),
            predicted_values_lmm = list(modelr::data_grid(data, Canopy_Cover_per, NO3_ug.L,nesting(Taxon,FFG))|>modelr::add_predictions(model)|>rename("{FA}" := "pred")),
-           predicted_values_lm = list(modelr::data_grid(data, Canopy_Cover_per, NO3_ug.L,FFG)|>modelr::add_predictions(model_lm)|>rename("{FA}" := "pred")),
+           #predicted_values_lm = list(modelr::data_grid(data, Canopy_Cover_per, NO3_ug.L,FFG)|>modelr::add_predictions(model_lm)|>rename("{FA}" := "pred")),
            lmm_perf = list(performance::model_performance(model)))|>
   select(-AIC,-BIC,-logLik)
 
 ggplot()+
-  geom_smooth(data = lmm1[[11]][[4]], aes(y = EPA, x = Canopy_Cover_per, group = FFG), color = "black",se = FALSE)+
-  geom_smooth(data = lmm1[[11]][[4]], aes(y = EPA, x = Canopy_Cover_per, color = Taxon), se = FALSE)+
-  geom_point(data = ffg_inverts,aes(y = EPA,x = Canopy_Cover_per, color = Taxon, shape = FFG))+
+  geom_smooth(data = lmm1[[11]][[1]], aes(y = LSAFA, x = Canopy_Cover_per, group = FFG), color = "black",se = FALSE)+
+  geom_smooth(data = lmm1[[11]][[1]], aes(y = LSAFA, x = Canopy_Cover_per, color = Taxon), se = FALSE)+
+  geom_point(data = ffg_inverts,aes(y = LSAFA,x = Canopy_Cover_per, color = Taxon, shape = FFG))+
   facet_wrap(.~FFG, scales = "free")
 
 ggplot()+
